--- a/index.html
+++ b/index.html
@@ -2,279 +2,231 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Red Team Portfolio</title>
+<title>Writeups Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-:root {
-  --bg: #0b0d10;
-  --panel: #11141a;
-  --border: #1e232e;
-  --text: #d6d6d6;
-  --muted: #9aa0aa;
-  --green: #00ff88;
+:root{
+  --bg:#0b0e13;
+  --panel:#11151c;
+  --border:#1c2330;
+  --text:#dcdcdc;
+  --muted:#9aa3ad;
+  --green:#00ff88;
 }
 
-/* ===== Base ===== */
-* { box-sizing: border-box; }
-body {
-  margin: 0;
-  font-family: Inter, system-ui;
-  background: radial-gradient(circle at top, #10141c, var(--bg));
-  color: var(--text);
-  overflow-x: hidden;
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Inter,system-ui;
+  background:var(--bg);
+  color:var(--text);
+  overflow-x:hidden;
 }
 
-/* Animated background */
-body::before {
-  content:"";
-  position: fixed;
+/* ===== Subtle Mesh Background ===== */
+.mesh{
+  position:fixed;
   inset:0;
   background:
-    repeating-linear-gradient(120deg,
-      rgba(0,255,136,.03) 0px,
-      rgba(0,255,136,.03) 1px,
-      transparent 40px);
-  animation: bgmove 20s linear infinite;
+    linear-gradient(120deg, rgba(255,255,255,.03) 1px, transparent 1px),
+    linear-gradient(60deg, rgba(255,255,255,.02) 1px, transparent 1px);
+  background-size: 60px 60px;
   pointer-events:none;
+  transition:transform .2s;
 }
-@keyframes bgmove {
-  from { transform: translateX(0); }
-  to { transform: translateX(200px); }
+body:hover .mesh{
+  transform:translate(var(--mx),var(--my));
 }
 
 /* ===== Layout ===== */
-.wrapper {
-  display: grid;
-  grid-template-columns: 260px 1fr;
-  min-height: 100vh;
+.container{
+  max-width:1200px;
+  margin:auto;
+  padding:40px 20px;
 }
 
-aside {
-  background: #0e1117;
-  padding: 25px;
-  border-right: 1px solid var(--border);
+/* ===== Navbar ===== */
+.nav{
+  display:flex;
+  gap:25px;
+  margin-bottom:40px;
+}
+.nav a{
+  color:var(--muted);
+  text-decoration:none;
+}
+.nav a:hover{
+  color:var(--green);
 }
 
-main {
-  padding: 40px;
-  max-width: 1200px;
-  margin: auto;
+/* ===== Writeup Card (OLD STYLE ENHANCED) ===== */
+.writeup{
+  display:flex;
+  background:linear-gradient(145deg,#121720,#0e1219);
+  border:1px solid var(--border);
+  border-radius:16px;
+  overflow:hidden;
+  margin-bottom:26px;
+  cursor:pointer;
+  transition:.35s;
+  position:relative;
 }
-
-/* ===== Sidebar ===== */
-.profile {
-  text-align: center;
-}
-.profile img {
-  width: 110px;
-  border-radius: 50%;
-}
-.profile h2 {
-  margin: 15px 0 5px;
-}
-.profile p {
-  color: var(--muted);
-  font-size: 13px;
-}
-
-nav {
-  margin-top: 30px;
-}
-nav a {
-  display: block;
-  padding: 12px 14px;
-  color: var(--text);
-  text-decoration: none;
-  border-radius: 8px;
-}
-nav a:hover {
-  background: #151a22;
-  color: var(--green);
-}
-
-/* ===== Sections ===== */
-section {
-  display: none;
-}
-section.active {
-  display: block;
-}
-
-/* ===== Cards ===== */
-.card {
-  background: linear-gradient(145deg, #11141a, #0c0f14);
-  border: 1px solid var(--border);
-  border-radius: 14px;
-  padding: 22px;
-  margin-bottom: 22px;
-  position: relative;
-  cursor: pointer;
-  transition: .35s;
-}
-.card::after {
+.writeup::after{
   content:"";
   position:absolute;
   inset:-1px;
-  border-radius: 14px;
-  background: radial-gradient(circle, rgba(0,255,136,.25), transparent 60%);
+  background:radial-gradient(circle,rgba(0,255,136,.25),transparent 65%);
   opacity:0;
   transition:.35s;
   z-index:-1;
 }
-.card:hover {
-  transform: scale(1.02);
+.writeup:hover{
+  transform:scale(1.015);
 }
-.card:hover::after {
+.writeup:hover::after{
   opacity:1;
 }
-.card h3 {
-  margin:0 0 8px;
+
+.writeup .info{
+  padding:28px;
+  flex:1;
 }
-.card p {
-  color: var(--muted);
-  font-size: 14px;
+.writeup h3{
+  margin:0 0 10px;
+}
+.writeup p{
+  margin:0;
+  color:var(--muted);
+  font-size:14px;
 }
 
-/* ===== Tags ===== */
-.tags span {
+.writeup .cover{
+  width:280px;
+  background:#0c0f15;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.writeup .cover img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+/* ===== About ===== */
+.about{
+  background:var(--panel);
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:30px;
+  margin:60px 0;
+}
+.tags span{
   display:inline-block;
-  background: rgba(0,255,136,.15);
-  color: var(--green);
-  padding:6px 10px;
-  border-radius: 20px;
-  font-size: 12px;
-  margin:5px 5px 0 0;
+  background:rgba(0,255,136,.15);
+  color:var(--green);
+  padding:6px 12px;
+  border-radius:20px;
+  font-size:12px;
+  margin:6px 6px 0 0;
 }
 
 /* ===== Social ===== */
-.social {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
-  gap: 14px;
+.social{
+  display:flex;
+  flex-wrap:wrap;
+  gap:18px;
+  margin-top:30px;
 }
-.social a {
+.social a{
   display:flex;
   align-items:center;
-  gap:12px;
-  padding:14px;
-  border-radius:12px;
-  background: var(--panel);
-  color: var(--text);
+  gap:10px;
+  color:var(--text);
   text-decoration:none;
+  padding:14px 18px;
+  border-radius:12px;
+  background:#10141b;
   transition:.3s;
 }
-.social a:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 0 20px rgba(0,255,136,.25);
-  color: var(--green);
-}
-
-/* ===== Writeups Page ===== */
-.group {
-  margin-bottom: 40px;
-}
-.group h2 {
-  margin-bottom: 16px;
-  color: var(--green);
+.social a:hover{
+  color:var(--green);
+  box-shadow:0 0 18px rgba(0,255,136,.25);
+  transform:translateY(-4px);
 }
 </style>
 </head>
 
 <body>
-<div class="wrapper">
+<div class="mesh"></div>
 
-<aside>
-  <div class="profile">
-    <img src="assets/images/luffy.jpg">
-    <h2>mrci0x1</h2>
-    <p>Red Team | Penetration Tester</p>
-  </div>
+<div class="container">
 
-  <nav>
-    <a onclick="show('home')">Home</a>
-    <a onclick="show('about')">About</a>
-    <a onclick="show('writeups')">Writeups</a>
-    <a onclick="show('contact')">Connect</a>
-  </nav>
-</aside>
+<nav class="nav">
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Writeups</a>
+  <a href="#">Contact</a>
+</nav>
 
-<main>
-
-<section id="home" class="active">
-  <div class="card" onclick="location.href='#'">
+<!-- ===== HOME WRITEUPS ===== -->
+<div class="writeup" onclick="location.href='#'">
+  <div class="info">
     <h3>HackTheBox – Artificial</h3>
-    <p>Full enumeration, privilege escalation, and clean exploitation path.</p>
+    <p>Full enumeration, exploitation chain, and privilege escalation.</p>
   </div>
+  <div class="cover">
+    <img src="artificial.png">
+  </div>
+</div>
 
-  <div class="card" onclick="location.href='#'">
+<div class="writeup" onclick="location.href='#'">
+  <div class="info">
     <h3>TryHackMe – Active Directory</h3>
-    <p>Attack chains, Kerberoasting, and lateral movement.</p>
+    <p>Kerberos attacks, lateral movement, and domain escalation.</p>
   </div>
-
-  <div class="card" onclick="location.href='#'">
-    <h3>eWPTX Notes</h3>
-    <p>JWT abuse, SQLi, NoSQLi & advanced web exploitation.</p>
+  <div class="cover">
+    <img src="thm.png">
   </div>
-</section>
+</div>
 
-<section id="about">
-  <div class="card">
-    <h3>About Me</h3>
-    <p>
-      I am a passionate Red Team operator and penetration tester focused on real-world attack simulations.
-      Ranked Top 1% on TryHackMe with over 300 completed labs, I specialize in web exploitation, Active Directory,
-      and post-exploitation techniques. I continuously sharpen my skills through labs, certifications,
-      and hands-on research while documenting everything in detailed writeups.
-    </p>
-    <div class="tags">
-      <span>Red Team</span><span>Pentesting</span><span>AD</span>
-      <span>Web Exploitation</span><span>CTFs</span>
-    </div>
+<!-- ===== ABOUT ===== -->
+<div class="about">
+  <h2>About Me</h2>
+  <p>
+    Red Team operator and penetration tester with strong focus on real-world attack simulation.
+    Ranked Top 1% on TryHackMe with 300+ completed labs.
+    Experienced in web exploitation, Active Directory, and post-exploitation techniques.
+    I document every learning path through clean, structured writeups.
+  </p>
+  <div class="tags">
+    <span>Red Team</span>
+    <span>Pentesting</span>
+    <span>Active Directory</span>
+    <span>Web Exploitation</span>
+    <span>CTFs</span>
   </div>
-</section>
+</div>
 
-<section id="contact">
-  <div class="social">
-    <a href="#"><i class="fab fa-github"></i> GitHub</a>
-    <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    <a href="#"><i class="fab fa-x-twitter"></i> X</a>
-    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-    <a href="#"><i class="fas fa-cube"></i> TryHackMe</a>
-    <a href="#"><i class="fas fa-box"></i> Hack The Box</a>
-  </div>
-</section>
+<!-- ===== CONTACT ===== -->
+<div class="social">
+  <a href="#"><i class="fab fa-github"></i> GitHub</a>
+  <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+  <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+  <a href="#"><i class="fas fa-cube"></i> TryHackMe</a>
+  <a href="#"><i class="fas fa-box"></i> Hack The Box</a>
+</div>
 
-<section id="writeups">
-  <div class="group">
-    <h2>TryHackMe Writeups</h2>
-    <div class="card">AD Labs & Privilege Escalation</div>
-    <div class="card">Linux Enumeration</div>
-  </div>
-
-  <div class="group">
-    <h2>Hack The Box Writeups</h2>
-    <div class="card">Artificial</div>
-    <div class="card">TombWatcher</div>
-  </div>
-
-  <div class="group">
-    <h2>General Writeups</h2>
-    <div class="card">Web Attacks</div>
-    <div class="card">Notes & Research</div>
-  </div>
-</section>
-
-</main>
 </div>
 
 <script>
-function show(id){
-  document.querySelectorAll('section').forEach(s=>s.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-}
+document.addEventListener('mousemove',e=>{
+  document.body.style.setProperty('--mx',(e.clientX-500)/50+'px');
+  document.body.style.setProperty('--my',(e.clientY-300)/50+'px');
+});
 </script>
 </body>
 </html>
