--- a/index.html
+++ b/index.html
@@ -1,231 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Writeups Portfolio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Aladeb Ahmad | Red Team Portfolio</title>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 <style>
-:root{
-  --bg:#0b0e13;
-  --panel:#11151c;
-  --border:#1c2330;
-  --text:#dcdcdc;
-  --muted:#9aa3ad;
-  --green:#00ff88;
-}
+*{box-sizing:border-box;margin:0;padding:0}
 
-*{box-sizing:border-box}
 body{
-  margin:0;
-  font-family:Inter,system-ui;
-  background:var(--bg);
-  color:var(--text);
-  overflow-x:hidden;
+  font-family:Inter,Arial,sans-serif;
+  background:#0b0f14;
+  color:#e5e7eb;
+  height:100vh;
+  display:grid;
+  grid-template-columns:260px 1fr;
+  overflow:hidden;
 }
 
-/* ===== Subtle Mesh Background ===== */
-.mesh{
+a{color:inherit;text-decoration:none}
+
+/* ===== LIVE GRID BACKGROUND ===== */
+.bg-grid{
   position:fixed;
   inset:0;
   background:
-    linear-gradient(120deg, rgba(255,255,255,.03) 1px, transparent 1px),
-    linear-gradient(60deg, rgba(255,255,255,.02) 1px, transparent 1px);
-  background-size: 60px 60px;
+    linear-gradient(rgba(255,255,255,.035) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255,255,255,.035) 1px, transparent 1px);
+  background-size:60px 60px;
   pointer-events:none;
-  transition:transform .2s;
-}
-body:hover .mesh{
-  transform:translate(var(--mx),var(--my));
+  transition:transform .15s;
+  z-index:0;
 }
 
-/* ===== Layout ===== */
-.container{
-  max-width:1200px;
-  margin:auto;
-  padding:40px 20px;
-}
-
-/* ===== Navbar ===== */
-.nav{
+/* ===== SIDEBAR ===== */
+.sidebar{
+  background:#020617;
+  padding:28px 22px;
   display:flex;
-  gap:25px;
-  margin-bottom:40px;
-}
-.nav a{
-  color:var(--muted);
-  text-decoration:none;
-}
-.nav a:hover{
-  color:var(--green);
+  flex-direction:column;
+  gap:28px;
+  border-right:1px solid #111827;
+  z-index:1;
 }
 
-/* ===== Writeup Card (OLD STYLE ENHANCED) ===== */
-.writeup{
-  display:flex;
-  background:linear-gradient(145deg,#121720,#0e1219);
-  border:1px solid var(--border);
+.profile{text-align:center}
+.profile img{
+  width:110px;height:110px;border-radius:50%;
+  object-fit:cover;margin-bottom:14px;
+}
+.profile h2{font-size:1.1rem}
+.profile p{font-size:.85rem;color:#9ca3af}
+
+.menu{display:flex;flex-direction:column;gap:6px}
+.menu button{
+  background:none;border:none;
+  color:#cbd5f5;
+  padding:12px 14px;
+  border-radius:10px;
+  display:flex;align-items:center;gap:12px;
+  cursor:pointer;font-size:.95rem;
+  transition:.2s;
+}
+.menu button:hover,
+.menu button.active{
+  background:#111827;
+  color:#22c55e;
+}
+
+.sidebar-footer{
+  margin-top:auto;
+  display:flex;justify-content:center;gap:14px;
+}
+.sidebar-footer i{
+  font-size:1.1rem;color:#9ca3af;
+  transition:.2s;
+}
+.sidebar-footer i:hover{color:#22c55e}
+
+/* ===== MAIN ===== */
+.main{
+  padding:40px 48px;
+  overflow-y:auto;
+  z-index:1;
+}
+.view{display:none}
+.view.active{display:block}
+
+/* ===== HOME / WRITEUPS ===== */
+.cards{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
+  gap:26px;
+}
+
+.card{
+  background:#020617;
   border-radius:16px;
   overflow:hidden;
-  margin-bottom:26px;
+  display:grid;
+  grid-template-columns:1fr 160px;
   cursor:pointer;
-  transition:.35s;
-  position:relative;
-}
-.writeup::after{
-  content:"";
-  position:absolute;
-  inset:-1px;
-  background:radial-gradient(circle,rgba(0,255,136,.25),transparent 65%);
-  opacity:0;
-  transition:.35s;
-  z-index:-1;
-}
-.writeup:hover{
-  transform:scale(1.015);
-}
-.writeup:hover::after{
-  opacity:1;
+  transition:.25s;
+  box-shadow:0 0 0 rgba(34,197,94,0);
 }
 
-.writeup .info{
-  padding:28px;
-  flex:1;
-}
-.writeup h3{
-  margin:0 0 10px;
-}
-.writeup p{
-  margin:0;
-  color:var(--muted);
-  font-size:14px;
+.card:hover{
+  transform:translateY(-6px) scale(1.015);
+  box-shadow:0 0 30px rgba(34,197,94,.25);
 }
 
-.writeup .cover{
-  width:280px;
-  background:#0c0f15;
+.card-content{padding:22px}
+.card h3{margin-bottom:8px}
+.card p{font-size:.9rem;color:#9ca3af}
+.card-meta{
+  margin-top:14px;
+  font-size:.75rem;color:#6b7280;
+}
+
+.card-img{
   display:flex;
   align-items:center;
   justify-content:center;
-}
-.writeup .cover img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
+  font-size:1.4rem;
+  color:#22c55e;
 }
 
-/* ===== About ===== */
+/* ===== ABOUT ===== */
 .about{
-  background:var(--panel);
-  border:1px solid var(--border);
-  border-radius:16px;
-  padding:30px;
-  margin:60px 0;
+  max-width:900px;
+  line-height:1.9;
 }
 .tags span{
   display:inline-block;
-  background:rgba(0,255,136,.15);
-  color:var(--green);
-  padding:6px 12px;
+  background:#052e16;
+  color:#22c55e;
+  padding:6px 14px;
   border-radius:20px;
-  font-size:12px;
   margin:6px 6px 0 0;
+  font-size:.85rem;
 }
 
-/* ===== Social ===== */
-.social{
-  display:flex;
-  flex-wrap:wrap;
+/* ===== CONTACT ===== */
+.contact-list{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:18px;
-  margin-top:30px;
+  max-width:800px;
 }
-.social a{
+.contact-item{
   display:flex;
   align-items:center;
-  gap:10px;
-  color:var(--text);
-  text-decoration:none;
-  padding:14px 18px;
+  gap:14px;
+  background:#020617;
+  padding:16px 20px;
   border-radius:12px;
-  background:#10141b;
-  transition:.3s;
+  transition:.25s;
 }
-.social a:hover{
-  color:var(--green);
-  box-shadow:0 0 18px rgba(0,255,136,.25);
+.contact-item:hover{
   transform:translateY(-4px);
+  box-shadow:0 0 22px rgba(34,197,94,.25);
+}
+.contact-item i{font-size:1.4rem;color:#22c55e}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:900px){
+  body{grid-template-columns:1fr}
+  .sidebar{position:sticky;top:0;z-index:50}
 }
 </style>
 </head>
 
 <body>
-<div class="mesh"></div>
+<div class="bg-grid"></div>
 
-<div class="container">
-
-<nav class="nav">
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Writeups</a>
-  <a href="#">Contact</a>
-</nav>
-
-<!-- ===== HOME WRITEUPS ===== -->
-<div class="writeup" onclick="location.href='#'">
-  <div class="info">
-    <h3>HackTheBox – Artificial</h3>
-    <p>Full enumeration, exploitation chain, and privilege escalation.</p>
+<aside class="sidebar">
+  <div class="profile">
+    <img src="profile.jpg">
+    <h2>Aladeb Ahmad</h2>
+    <p>Red Team / Pentester</p>
   </div>
-  <div class="cover">
-    <img src="artificial.png">
-  </div>
-</div>
 
-<div class="writeup" onclick="location.href='#'">
-  <div class="info">
-    <h3>TryHackMe – Active Directory</h3>
-    <p>Kerberos attacks, lateral movement, and domain escalation.</p>
+  <div class="menu">
+    <button class="active" onclick="showView('home',this)"><i class="fa-house"></i> Home</button>
+    <button onclick="showView('writeups',this)"><i class="fa-pen"></i> Writeups</button>
+    <button onclick="showView('about',this)"><i class="fa-user"></i> About</button>
+    <button onclick="showView('contact',this)"><i class="fa-link"></i> Contact</button>
   </div>
-  <div class="cover">
-    <img src="thm.png">
+
+  <div class="sidebar-footer">
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-x-twitter"></i>
   </div>
-</div>
+</aside>
 
-<!-- ===== ABOUT ===== -->
-<div class="about">
-  <h2>About Me</h2>
-  <p>
-    Red Team operator and penetration tester with strong focus on real-world attack simulation.
-    Ranked Top 1% on TryHackMe with 300+ completed labs.
-    Experienced in web exploitation, Active Directory, and post-exploitation techniques.
-    I document every learning path through clean, structured writeups.
-  </p>
-  <div class="tags">
-    <span>Red Team</span>
-    <span>Pentesting</span>
-    <span>Active Directory</span>
-    <span>Web Exploitation</span>
-    <span>CTFs</span>
+<main class="main">
+
+<section id="home" class="view active">
+  <div class="cards">
+    <div class="card" onclick="location.href='#'">
+      <div class="card-content">
+        <h3>HackTheBox – Artificial</h3>
+        <p>Full machine writeup covering enumeration, exploitation and privilege escalation.</p>
+        <div class="card-meta">HTB · Linux</div>
+      </div>
+      <div class="card-img">HTB</div>
+    </div>
+
+    <div class="card" onclick="location.href='#'">
+      <div class="card-content">
+        <h3>TryHackMe – Active Directory</h3>
+        <p>Kerberos attacks, lateral movement, and domain escalation.</p>
+        <div class="card-meta">THM · AD</div>
+      </div>
+      <div class="card-img">THM</div>
+    </div>
   </div>
-</div>
+</section>
 
-<!-- ===== CONTACT ===== -->
-<div class="social">
-  <a href="#"><i class="fab fa-github"></i> GitHub</a>
-  <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-  <a href="#"><i class="fas fa-cube"></i> TryHackMe</a>
-  <a href="#"><i class="fas fa-box"></i> Hack The Box</a>
-</div>
+<section id="about" class="view">
+  <div class="about">
+    <h2>About Me</h2>
+    <p>
+      Red Team operator and penetration testing enthusiast focused on real-world offensive security.
+      Ranked Top 1% on TryHackMe with over 300 completed labs.
+      Strong experience in web exploitation, Linux systems, Active Directory attacks,
+      privilege escalation, and post-exploitation techniques.
+      I document every learning path through clean and structured writeups.
+    </p>
+    <div class="tags">
+      <span>Red Team</span><span>Pentesting</span><span>TryHackMe</span>
+      <span>Hack The Box</span><span>Active Directory</span><span>Linux</span>
+    </div>
+  </div>
+</section>
 
-</div>
+<section id="contact" class="view">
+  <h2>Contact & Platforms</h2>
+  <div class="contact-list">
+    <a class="contact-item" href="#"><i class="fab fa-github"></i> GitHub</a>
+    <a class="contact-item" href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+    <a class="contact-item" href="#"><i class="fab fa-x-twitter"></i> X</a>
+    <a class="contact-item" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+    <a class="contact-item" href="#"><i class="fa-terminal"></i> TryHackMe</a>
+    <a class="contact-item" href="#"><i class="fa-cube"></i> Hack The Box</a>
+  </div>
+</section>
+
+</main>
 
 <script>
+function showView(id,btn){
+  document.querySelectorAll('.view').forEach(v=>v.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+  document.querySelectorAll('.menu button').forEach(b=>b.classList.remove('active'));
+  btn.classList.add('active');
+}
+
 document.addEventListener('mousemove',e=>{
-  document.body.style.setProperty('--mx',(e.clientX-500)/50+'px');
-  document.body.style.setProperty('--my',(e.clientY-300)/50+'px');
+  document.querySelector('.bg-grid').style.transform=
+    `translate(${(e.clientX-600)/80}px, ${(e.clientY-300)/80}px)`
 });
 </script>
 </body>
