--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <style>
 *{box-sizing:border-box;margin:0;padding:0}
-
 body{
   font-family:Inter,Arial,sans-serif;
   background:#0b0f14;
@@ -19,19 +18,12 @@ body{
   grid-template-columns:260px 1fr;
   overflow:hidden;
 }
-
 a{color:inherit;text-decoration:none}
 
-/* ===== LIVE GRID BACKGROUND ===== */
-.bg-grid{
+/* ===== CANVAS BACKGROUND ===== */
+#bg{
   position:fixed;
   inset:0;
-  background:
-    linear-gradient(rgba(255,255,255,.035) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(255,255,255,.035) 1px, transparent 1px);
-  background-size:60px 60px;
-  pointer-events:none;
-  transition:transform .15s;
   z-index:0;
 }
 
@@ -43,9 +35,8 @@ a{color:inherit;text-decoration:none}
   flex-direction:column;
   gap:28px;
   border-right:1px solid #111827;
-  z-index:1;
+  z-index:2;
 }
-
 .profile{text-align:center}
 .profile img{
   width:110px;height:110px;border-radius:50%;
@@ -84,55 +75,60 @@ a{color:inherit;text-decoration:none}
 .main{
   padding:40px 48px;
   overflow-y:auto;
-  z-index:1;
+  z-index:2;
 }
 .view{display:none}
 .view.active{display:block}
 
-/* ===== HOME / WRITEUPS ===== */
+/* ===== HOME WRITEUPS ===== */
 .cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
+  display:flex;
+  flex-direction:column;
   gap:26px;
 }
 
 .card{
   background:#020617;
-  border-radius:16px;
-  overflow:hidden;
-  display:grid;
-  grid-template-columns:1fr 160px;
+  border-radius:18px;
+  padding:26px;
   cursor:pointer;
   transition:.25s;
   box-shadow:0 0 0 rgba(34,197,94,0);
+  position:relative;
 }
-
+.card::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:18px;
+  background:radial-gradient(circle at top left, rgba(34,197,94,.15), transparent 60%);
+  opacity:.4;
+  pointer-events:none;
+}
 .card:hover{
-  transform:translateY(-6px) scale(1.015);
-  box-shadow:0 0 30px rgba(34,197,94,.25);
+  transform:translateY(-6px) scale(1.01);
+  box-shadow:0 0 35px rgba(34,197,94,.35);
 }
-
-.card-content{padding:22px}
 .card h3{margin-bottom:8px}
-.card p{font-size:.9rem;color:#9ca3af}
-.card-meta{
-  margin-top:14px;
-  font-size:.75rem;color:#6b7280;
-}
+.card p{color:#9ca3af}
+.card-meta{margin-top:10px;font-size:.8rem;color:#6b7280}
 
-.card-img{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:1.4rem;
+/* ===== WRITEUPS PAGE ===== */
+.writeup-section{
+  margin-bottom:46px;
+}
+.writeup-section h2{
+  margin-bottom:18px;
   color:#22c55e;
+}
+.writeup-list{
+  display:flex;
+  flex-direction:column;
+  gap:16px;
 }
 
 /* ===== ABOUT ===== */
-.about{
-  max-width:900px;
-  line-height:1.9;
-}
+.about{max-width:900px;line-height:1.9}
 .tags span{
   display:inline-block;
   background:#052e16;
@@ -160,21 +156,20 @@ a{color:inherit;text-decoration:none}
   transition:.25s;
 }
 .contact-item:hover{
-  transform:translateY(-4px);
-  box-shadow:0 0 22px rgba(34,197,94,.25);
+  transform:translateY(-4px) scale(1.03);
+  box-shadow:0 0 22px rgba(34,197,94,.3);
 }
 .contact-item i{font-size:1.4rem;color:#22c55e}
 
-/* ===== RESPONSIVE ===== */
 @media(max-width:900px){
   body{grid-template-columns:1fr}
-  .sidebar{position:sticky;top:0;z-index:50}
+  .sidebar{position:sticky;top:0}
 }
 </style>
 </head>
 
 <body>
-<div class="bg-grid"></div>
+<canvas id="bg"></canvas>
 
 <aside class="sidebar">
   <div class="profile">
@@ -193,7 +188,7 @@ a{color:inherit;text-decoration:none}
   <div class="sidebar-footer">
     <i class="fa-brands fa-github"></i>
     <i class="fa-brands fa-linkedin"></i>
-    <i class="fa-brands fa-x-twitter"></i>
+    <i class="fa-brands fa-telegram"></i>
   </div>
 </aside>
 
@@ -202,21 +197,39 @@ a{color:inherit;text-decoration:none}
 <section id="home" class="view active">
   <div class="cards">
     <div class="card" onclick="location.href='#'">
-      <div class="card-content">
-        <h3>HackTheBox – Artificial</h3>
-        <p>Full machine writeup covering enumeration, exploitation and privilege escalation.</p>
-        <div class="card-meta">HTB · Linux</div>
-      </div>
-      <div class="card-img">HTB</div>
+      <h3>HackTheBox – Artificial</h3>
+      <p>Full machine writeup covering enumeration, exploitation and privilege escalation.</p>
+      <div class="card-meta">HTB · Linux</div>
     </div>
-
     <div class="card" onclick="location.href='#'">
-      <div class="card-content">
-        <h3>TryHackMe – Active Directory</h3>
-        <p>Kerberos attacks, lateral movement, and domain escalation.</p>
-        <div class="card-meta">THM · AD</div>
-      </div>
-      <div class="card-img">THM</div>
+      <h3>TryHackMe – Active Directory</h3>
+      <p>Kerberos attacks, lateral movement, and domain escalation.</p>
+      <div class="card-meta">THM · AD</div>
+    </div>
+  </div>
+</section>
+
+<section id="writeups" class="view">
+  <div class="writeup-section">
+    <h2>TryHackMe Writeups</h2>
+    <div class="writeup-list">
+      <div class="card">THM – Network Services</div>
+      <div class="card">THM – Buffer Overflow</div>
+    </div>
+  </div>
+
+  <div class="writeup-section">
+    <h2>Hack The Box Writeups</h2>
+    <div class="writeup-list">
+      <div class="card">HTB – Linux PrivEsc</div>
+      <div class="card">HTB – Windows AD</div>
+    </div>
+  </div>
+
+  <div class="writeup-section">
+    <h2>General Writeups</h2>
+    <div class="writeup-list">
+      <div class="card">Web Exploitation Notes</div>
     </div>
   </div>
 </section>
@@ -243,8 +256,7 @@ a{color:inherit;text-decoration:none}
   <div class="contact-list">
     <a class="contact-item" href="#"><i class="fab fa-github"></i> GitHub</a>
     <a class="contact-item" href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    <a class="contact-item" href="#"><i class="fab fa-x-twitter"></i> X</a>
-    <a class="contact-item" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+    <a class="contact-item" href="#"><i class="fab fa-telegram"></i> Telegram</a>
     <a class="contact-item" href="#"><i class="fa-terminal"></i> TryHackMe</a>
     <a class="contact-item" href="#"><i class="fa-cube"></i> Hack The Box</a>
   </div>
@@ -260,10 +272,35 @@ function showView(id,btn){
   btn.classList.add('active');
 }
 
-document.addEventListener('mousemove',e=>{
-  document.querySelector('.bg-grid').style.transform=
-    `translate(${(e.clientX-600)/80}px, ${(e.clientY-300)/80}px)`
-});
+/* ===== PARTICLE BACKGROUND ===== */
+const c=document.getElementById("bg"),x=c.getContext("2d");
+let w,h,pts=[];
+function resize(){w=c.width=innerWidth;h=c.height=innerHeight}
+window.onresize=resize;resize();
+
+for(let i=0;i<80;i++)
+  pts.push({x:Math.random()*w,y:Math.random()*h,vx:(Math.random()-.5)*.4,vy:(Math.random()-.5)*.4})
+
+let mx=0,my=0;
+addEventListener("mousemove",e=>{mx=e.clientX;my=e.clientY})
+
+function draw(){
+  x.clearRect(0,0,w,h);
+  for(let p of pts){
+    p.x+=p.vx;p.y+=p.vy;
+    if(p.x<0||p.x>w)p.vx*=-1;
+    if(p.y<0||p.y>h)p.vy*=-1;
+    for(let q of pts){
+      let d=Math.hypot(p.x-q.x,p.y-q.y);
+      if(d<120){
+        x.strokeStyle="rgba(34,197,94,"+(1-d/120)*.15+")";
+        x.beginPath();x.moveTo(p.x,p.y);x.lineTo(q.x,q.y);x.stroke();
+      }
+    }
+  }
+  requestAnimationFrame(draw)
+}
+draw();
 </script>
 </body>
 </html>
